--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
   width: 300px !important;
   height: 200px;
   margin: 0 !important;
+  overflow-y: hidden;
 }
 
 input {
@@ -69,6 +70,11 @@ button {
 
 .button-view:active {
   background-color: #111;
+}
+
+.list-container {
+  max-height: 400px;
+  overflow-y: scroll;
 }
 
 li {
