--- a/style.css
+++ b/style.css
@@ -22,6 +22,19 @@ button {
   outline: none;
 }
 
+.saved-alert {
+  background-color: green;
+  color: white;
+  font-size: 4em;
+  font-weight: 100;
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  height: 150px;
+  padding-top: 27%;
+}
+
 .title {
   text-align: center;
   margin: 0 0 !important;
@@ -34,7 +47,9 @@ button {
 }
 
 .display-none {
-  display: none;
+  /* display: none; */
+  visibility: 'hidden';
+  height: 14px;
 }
 
 .current-page {
