Made chrome extension close after save. Decided it didn't make sense to keep it open after someone saved a link. This also means I don't have to fix a bug that would show up on saving more than once while the extension is open. For documenting purposes in case I ever decide to change this and not close the window on save, the bug was that when you save more than once the save alert wouldn't pop up after the first time and each quicklink key that you saved would still be saved even after the next save instead of being deleted.

--- a/style.css
+++ b/style.css
@@ -39,16 +39,15 @@ button {
 
 .saved-animation {
   display: block;
-  -webkit-animation-name: showHide;
-  -webkit-animation-duration: 1.5s;
+  -webkit-animation-name: show;
+  -webkit-animation-duration: 1s;
   -webkit-animation-delay: 0.1s;
 }
 
-@-webkit-keyframes showHide {
+@-webkit-keyframes show {
   0% {opacity: 0;}
   25% {opacity: 1;}
-  75% {opacity: 1;}
-  100% {opacity: 0;}
+  100% {opacity: 1;}
 }
 
 .title {
